refactor(config): 修改成用taghelper渲染

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
  <app id="app" class="my-app" asp-prerender-module="ClientApp/renderOnServer">Loading...</app>
 
 @section scripts {
-  <script src="~/dist/app.js" asp-append-version="true"></script>
+  <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
